MVC setup complete for authentication

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-OPENAI_API_KEY = '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'
+OPENAI_API_KEY = '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'
+PORT = 8000
