--- a/package.json
+++ b/package.json
@@ -2,18 +2,21 @@
   "name": "gpt-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "type": "module",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon  index.js"
+    "start": "nodemon  app.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@iamtraction/google-translate": "github:iamtraction/google-translate",
+    "@vitalets/google-translate-api": "^9.2.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "free-translate": "^0.6.1",
     "nodemon": "^3.0.1",
-    "openai": "^4.0.0"
+    "openai": "^4.0.0",
+    "translate": "^2.0.2"
   }
 }
