--- a/package.json
+++ b/package.json
@@ -12,11 +12,23 @@
   "dependencies": {
     "@iamtraction/google-translate": "github:iamtraction/google-translate",
     "@vitalets/google-translate-api": "^9.2.0",
+    "connect-mongo": "^5.1.0",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "crypto": "^1.0.1",
+    "csurf": "^1.11.0",
     "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-session": "^1.18.0",
     "free-translate": "^0.6.1",
+    "http-errors": "^2.0.0",
+    "morgan": "^1.10.0",
     "nodemon": "^3.0.1",
     "openai": "^4.0.0",
+    "passport": "^0.7.0",
+    "passport-google-oidc": "^0.1.0",
+    "passport-local": "^1.0.0",
     "translate": "^2.0.2"
   }
 }
